<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brickbarcelonap"
    tools:context="com.crouther.cypher.optionDescription">

    <TextView
        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/rounded_corner"
        android:alpha=".8"

        android:padding="20dp"
        android:layout_marginTop="30dp"

        android:text="@string/option"
        app:fontFamily="@font/appfont"
        android:fontFamily="@font/appfont"
        android:textAlignment="center"

        android:textAllCaps="false"

        android:textColor="#000"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/description"
        android:layout_width="330dp"

        android:layout_height="wrap_content"
        android:alpha=".8"
        android:background="#e9e9e9"
        android:padding="20dp"

        android:text="@string/option_description"
        app:fontFamily="@font/appfont"
        android:fontFamily="@font/appfont"

        android:textAlignment="center"
        android:lineSpacingMultiplier="1.2"

        android:textColor="#000"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/wave"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha=".8"

        android:contentDescription="@string/go"

        android:padding="12dp"
        android:src="@drawable/icon"

        android:background="@drawable/circle"
        android:layout_marginBottom="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
