<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.crouther.cypher.splash">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.-->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/brickmuralp"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:background="@color/black_overlay"
            android:orientation="horizontal"

            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:ignore="UselessParent">

        </LinearLayout>

        <Button
            android:id="@+id/start"
            android:layout_width="110dp"

            android:layout_height="45dp"
            android:layout_marginBottom="95dp"

            android:background="#87deaa"
            android:elevation="5dp"
            android:onClick="startGame"

            android:padding="10dp"
            android:text="@string/start"
            app:fontFamily="@font/appfont"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/about"
            android:layout_width="110dp"

            android:layout_height="45dp"
            android:layout_marginBottom="30dp"

            android:background="#87bbde"

            android:elevation="5dp"
            android:onClick="goAbout"
            android:padding="10dp"

            android:text="@string/about"
            app:fontFamily="@font/appfont"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/splash"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"

            android:alpha=".8"

            android:contentDescription="@string/splashlogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logoandbkg" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
