<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    tools:context="com.crouther.cypher.about">

    <ImageView
        android:id="@+id/aboutLogo"
        android:src="@drawable/cypher"

        android:layout_width="match_parent"
        android:layout_height="130dp"

        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/aboutTitle"
        android:text="About"
        android:fontFamily="@font/appfont"
        app:fontFamily="@font/appfont"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/aboutDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/aboutDescription"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:padding="20dp"

        android:text="@string/aboutText"
        android:fontFamily="@font/appfont"
        app:fontFamily="@font/appfont"
        android:lineSpacingMultiplier="1.3"
        android:textAlignment="center"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/selfie"
        android:src="@drawable/androidify"

        android:layout_width="140dp"
        android:layout_height="140dp"

        android:padding="20dp"

        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/gameStudio"

        android:text="@string/gotplayed_studios"
        android:fontFamily="@font/appfont"
        app:fontFamily="@font/appfont"
        android:textAlignment="textStart"

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"

        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="start" />

    <TextView
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:paddingBottom="40dp"

        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="0dp"

        android:text="@string/crouther_github_io"
        android:fontFamily="@font/appfont"
        app:fontFamily="@font/appfont"

        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
